--- a/src/app/components/main/menu/side-navigation/side-navigation.component.html
+++ b/src/app/components/main/menu/side-navigation/side-navigation.component.html
@@ -56,6 +56,11 @@
                     <span class="nav-label">Input Field</span>
                 </a>
             </li>
+            <li>
+                <a (click)="createComponent('select')">
+                    <span class="nav-label">Select</span>
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
