--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -14,7 +14,7 @@
                         email
                         formControlName="email"
                         class="form-control"
-                        placeholder="email"
+                        placeholder="E-mail"
                     />
                 </div>
                 <div class="form-group">
